# demo-pypi

./: .gitignore  DOCS.md  README.md  pydoc-markdown.yml  pyproject.toml
src/demo_pypi/: __init__.py
tests/: test_add_one.py
