[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo-pypi"
version = "0.0.1"
authors = [
  { name="YOUR NAME", email="your@email.com" },
]
description = "A demonstration package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
